--- a/docs/config/templates/indexPage.template.html
+++ b/docs/config/templates/indexPage.template.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="docsApp" ng-controller="DocsController">
+<html lang="en" ng-app="docsApp" ng-controller="DocsController as Docs">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
@@ -10,7 +10,9 @@
   <title>smeans.js</title>
 
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.7/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.7/angular-route.min.js"></script>
 
   <script type="text/javascript">
     // dynamically add base tag as well as css and javascript files.
@@ -69,11 +71,40 @@
   </header>
 
   <section role="main" class="container">
-    {{ DOCS_PAGES | json }}
+    <div class="row">
+      <div class="sidebar col-md-4">
+        <input type="text" class="form-control" placeholder="Search..." ng-model="docFilter">
+
+        <br>
+
+        <div ng-repeat="nav in NAV_DATA | orderObjectBy:'name':true">
+          <div class="list-group">
+            <div class="list-group-item"><strong>{{ nav.name }}</strong></div>
+            <!-- <li class="list-group-item" ng-repeat="doc in nav.pages | filter:docFilter"> -->
+              <!-- <a href="#" ng-click="Docs.include(doc.path)">{{ doc.name }}</a> -->
+            <a class="list-group-item doc-link"
+              ng-repeat="doc in nav.pages | filter:docFilter"
+              ng-href="#/doc/{{ doc.path }}"
+              ng-class="Docs.linkClass(doc)">
+              {{ doc.name }}
+            </a>
+            <!-- </li> -->
+          </div>
+        </div>
+
+      </div>
+      <div class="view col-md-8" ng-view>
+
+      </div>
+    </div>
   </section>
 
   <footer class="footer">
     
   </footer>
+
+  <script type="text/ng-template" id="/partials/index.html">
+    <h1>Hello!</h1>
+  </script>
 </body>
 </html>
