--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -2,6 +2,9 @@ body {
   padding-top: 60px;
 }
 
-.doc-link {
-  
+.runnable-example-frame {
+  width: 100%;
+  height: 400px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
 }
